--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,7 @@ html{
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 .title-section img{
     opacity: 1;
@@ -97,7 +98,7 @@ html{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: 1;
+    z-index: 4;
 }
 .title-content{
     z-index: 20;
@@ -126,4 +127,16 @@ html{
 .title-content a button:hover{
     background-color: #dca952;
 }
-
+.scroll-img{
+    z-index: 5;
+    margin-top: -50px;
+}
+/* SECTION 2 CSS */
+.section-dishes{
+    padding: 80px 0;
+}
+.dishes-title h3{
+    font-size: 40px;
+    font-family: var(--yeseva-fonts);
+    padding-bottom: 60px;
+}
