--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -93,6 +93,14 @@
     .dishes-title h3{
         font-size: 32px;
     }
+    .about-title h2{
+        text-align: center;
+        font-size: 22px;
+    }
+    .about-title{
+        padding: 0;
+        margin-bottom: 36px !important;
+    }
 }
 @media (max-width: 576px) {
     .buynow-btn{
@@ -105,5 +113,11 @@
     .title-content p{
         font-size: 8px;
         margin-bottom: 20px !important;
+    }
+    .our-offer h5{
+        font-size: 24px;
+    }
+    .our-offer{
+        padding-left: 24px;
     }
 }
