--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,3 +358,37 @@ html{
 .Check{
     color: var(--text-color)
 }
+/* SECTION 6 CSS */
+.about-chef-section{
+    background-color: #e2e5e5;
+}
+.chef-img{
+    background-image: url(../image/download100.jpg);
+    position: relative;
+    background-repeat: no-repeat;
+}
+.chef-content{
+    padding: 180px 60px 180px;
+    background: #e2e5e5;
+}
+.chef-content h2{
+    font-family: var(--yeseva-fonts);
+    line-height: 50px;
+    font-weight: 300;
+    letter-spacing: 0px;
+    color: var(--text-color-primary);
+}
+.chef-content p{
+    font-size: 14px;
+    font-family: var(--poopines-fonts);
+    color: #4c4c4c;
+}
+.chef-content button{
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    font-family: var(--poopines-fonts);
+    font-size: 14px;
+    color: var(--text-color-primary);
+    background-color: var(--button-color);
+}
